# WebcamScanner

./: CMakeLists.txt
include/: WebcamScanner.hpp
src/: WebcamScanner.cpp  main.cpp
